# prometheus-python-example

./: Readme.md  pyproject.toml
config/alertmanager/: alertmanager.yml
config/prometheus/: prometheus.yml  rules.yml
deployment/: Dockerfile  docker-compose.yml
src/api_client/: main.py
src/api_receiver/: main.py
