[tool.poetry]
name = "prometheus-client-fastapi"
version = "0.1.0"
description = ""
authors = ["Iram Luis Morales Santos <iramluism@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
fastapi = "^0.109.0"
prometheus-client = "^0.19.0"
gunicorn = "^21.2.0"
uvicorn = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
